--- a/front_home_login/home-patient.html
+++ b/front_home_login/home-patient.html
@@ -138,6 +138,48 @@
       <h4>- Sara M.</h4>
     </div>
 
+     <div class="testimonial-card">
+      <p>“medicament a moin prix.”</p>
+      <h4>- faycal O.</h4>
+    </div>
+
+    <div class="testimonial-card">
+      <p>“Très pratique pour prendre rendez-vous.”</p>
+      <h4>- Youssef A.</h4>
+    </div>
+
+    <div class="testimonial-card">
+      <p>“Très pratique pour prendre rendez-vous.”</p>
+      <h4>- Youssef A.</h4>
+    </div>
+
+    <div class="testimonial-card">
+      <p>“Très pratique pour prendre rendez-vous.”</p>
+      <h4>- Youssef A.</h4>
+    </div>
+  </div>
+
+   <div class="testimonial-grid">
+    <div class="testimonial-card">
+      <p>“Service rapide et médecins compétents.”</p>
+      <h4>- Sara M.</h4>
+    </div>
+
+     <div class="testimonial-card">
+      <p>“medicament a moin prix.”</p>
+      <h4>- faycal O.</h4>
+    </div>
+
+    <div class="testimonial-card">
+      <p>“Très pratique pour prendre rendez-vous.”</p>
+      <h4>- Youssef A.</h4>
+    </div>
+    
+    <div class="testimonial-card">
+      <p>“Très pratique pour prendre rendez-vous.”</p>
+      <h4>- Youssef A.</h4>
+    </div>
+
     <div class="testimonial-card">
       <p>“Très pratique pour prendre rendez-vous.”</p>
       <h4>- Youssef A.</h4>
@@ -201,4 +243,3 @@
 <script src="./assets/js/home-patient.js"></script>
 </body>
 </html>
-
