ajout des doctors

--- a/front_home_login/home-patient.html
+++ b/front_home_login/home-patient.html
@@ -27,7 +27,7 @@
 
   <div class="nav-right">
     <a href="home-patient.html">Accueil</a>
-    <a href="#">Médecins</a>
+    <a id="btnMedecins" href="#">Médecins</a>
     <a href="#">Rendez-vous</a>
     <a href="#">Messages</a>
     <a href="#" id="logoutBtn">Déconnexion</a>
